# link-suggestion

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  Procfile  README.md  TODO  TODO.md
anchor-dictionary/: Cargo.toml
anchor-dictionary/src/: main.rs  sqlite_cli.rs
deployment/toolforge/: deploy.sh
linksuggestion-bloom/: Cargo.toml
linksuggestion-bloom/src/: lib.rs  main.rs
linksuggestion-core/: Cargo.toml
linksuggestion-core/src/: database.rs  edit.rs  freq_distribution.rs  lib.rs  link_suggestion.rs  main.rs  wiki_title.rs  wikitext.rs
linksuggestion-web/: Cargo.toml
linksuggestion-web/src/: main.rs  router.rs
src/: anchor_dictionary.rs  bloom_filter.rs  edit.rs  lib.rs  link_suggestion.rs  main.rs  sqlite_cli.rs  stopwords.rs  wiki_title.rs  wikitext.rs
src/web/: main.rs  router.rs
static/: main.js  style.css
templates/: index.hbs
templates/partials/: header.hbs
