[package]
name = "bloom-wiki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bloom-wiki"
path = "src/main.rs"

[[bin]]
name = "anchor-dictionary"
path = "src/anchor_dictionary.rs"

[dependencies]
tree-sitter-wikitext = { git = "https://github.com/santhoshtr/tree-sitter-wikitext", rev = "8f4e50b7" }
bloomfilter = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.25.6"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
quick-xml = { version = "0.37.5", features = [
  "encoding",
  "escape-html",
  "overlapped-lists",
] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
