[package]
name = "bloom-wiki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "link-suggestion"
path = "src/main.rs"

[[bin]]
name = "anchor-dictionary"
path = "src/anchor_dictionary.rs"

[[bin]]
name = "bloom-builder"
path = "src/bloom_filter.rs"

[[bin]]
name = "sqlite-cli"
path = "src/sqlite_cli.rs"


[dependencies]
tree-sitter-wikitext = { git = "https://github.com/santhoshtr/tree-sitter-wikitext", rev = "8f4e50b7" }
bloomfilter = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.25.6"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = [
  "encoding",
  "serialize",
  "escape-html",
  "overlapped-lists",
] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
bzip2 = "0.6.0"
rayon = "1.10.0"
