[package]
name = "linksuggestions"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "linksuggestion-cli"
path = "src/main.rs"

[[bin]]
name = "anchor-dictionary"
path = "src/anchor_dictionary.rs"

[[bin]]
name = "bloom-builder"
path = "src/bloom_filter.rs"

[[bin]]
name = "sqlite-cli"
path = "src/sqlite_cli.rs"

[[bin]]
name = "edit-tree"
path = "src/edit.rs"

[[bin]]
name = "linksuggestion-web"
path = "src/web/main.rs"

[dependencies]
tree-sitter-wikitext = { git = "https://github.com/santhoshtr/tree-sitter-wikitext", rev = "1da913a" }
bloomfilter = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.25.6"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
tokio = { version = "1.0", features = ["full"] }
quick-xml = { version = "0.38", features = [
  "encoding",
  "serialize",
  "escape-html",
  "overlapped-lists",
] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
bzip2 = "0.6.0"
rayon = "1.10.0"
actix-web = "4.10.2"
actix-files = "0.6.6"
env_logger = "0.11.7"
handlebars = "6.3.2"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
