[package]
name = "anchor-dictionary"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "sqlite-cli"
path = "src/sqlite_cli.rs"

[dependencies]
linksuggestion-core = { path = "../linksuggestion-core/" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
quick-xml = { version = "0.38", features = [
  "encoding",
  "serialize",
  "escape-html",
  "overlapped-lists",
] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
bzip2 = "0.6.0"
rayon = "1.10.0"
actix-files = "0.6.6"
env_logger = "0.11.7"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
