[package]
name = "linksuggestion-core"
version = "0.1.0"
edition = "2024"


[dependencies]
tree-sitter-wikitext = { git = "https://github.com/santhoshtr/tree-sitter-wikitext", rev = "7772030" }
linksuggestion-bloom = { path = "../linksuggestion-bloom/" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.25.6"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
rayon = "1.10.0"
env_logger = "0.11.7"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
