[package]
name = "linksuggestion-core"
version = "0.1.0"
edition = "2024"


[dependencies]
tree-sitter-wikitext = { version ="0.1.1" }
linksuggestion-bloom = { path = "../linksuggestion-bloom/" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.26.6"
lazy_static = "1.5.0"
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "stream",
] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
rayon = "1.10.0"
env_logger = "0.11.7"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
